[package]
name = "gameguy"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["libgameguy"]
resolver = "2"           # recommended for modern features resolution


[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
libgameguy = { path = "./libgameguy" }

[[bin]]
name = "gbdb"
path = "src/bin/gbdb.rs"
